<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ecrowd.ecrowd.ui.SignUp"

    android:background="@drawable/back"
    >


    <RelativeLayout
        android:layout_width="350dp"
        android:layout_height="575dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="26dp"
        tools:layout_editor_absoluteY="1dp">

        <TextView
            android:id="@+id/textView_Title_Signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="23dp"
            android:text="@string/textView_Title_Signup"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/textView_username_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView_Title_Signup"
            android:layout_marginLeft="36dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="35dp"
            android:text="@string/textView_username_signup"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/textView_email_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText_email_signup"
            android:layout_alignBottom="@+id/editText_email_signup"
            android:layout_toLeftOf="@+id/editText_usernme_signup"
            android:layout_toStartOf="@+id/editText_usernme_signup"
            android:text="@string/textView_email_signup"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/textView_firstname_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText_Firstname_signup"
            android:layout_alignBottom="@+id/editText_Firstname_signup"
            android:layout_alignLeft="@+id/textView_last_name_signup"
            android:layout_alignStart="@+id/textView_last_name_signup"
            android:text="@string/textView_firstname_signup"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/textView_last_name_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText_lastname_signup"
            android:layout_alignBottom="@+id/editText_lastname_signup"
            android:layout_alignLeft="@+id/textView_password_signup"
            android:layout_alignStart="@+id/textView_password_signup"
            android:text="@string/textView_lastname_signup"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/textView_password_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/editText_password_signup"
            android:layout_alignBottom="@+id/editText_password_signup"
            android:layout_toLeftOf="@+id/editText_usernme_signup"
            android:layout_toStartOf="@+id/editText_usernme_signup"
            android:text="@string/textView_password_signup"
            android:textColor="#fff"/>

        <TextView
            android:id="@+id/textView_Confirm_password_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/textView_password_signup"
            android:layout_alignStart="@+id/textView_password_signup"
            android:layout_below="@+id/editText_password_signup"
            android:layout_marginTop="30dp"
            android:layout_toLeftOf="@+id/editText_usernme_signup"
            android:layout_toStartOf="@+id/editText_usernme_signup"
            android:text="@string/textView_confirm_password_signup"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/editText_usernme_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/textView_username_signup"
            android:layout_alignBottom="@+id/textView_username_signup"
            android:layout_marginLeft="28dp"
            android:layout_marginStart="28dp"
            android:layout_toEndOf="@+id/textView_username_signup"
            android:layout_toRightOf="@+id/textView_username_signup"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/editText_email_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText_usernme_signup"
            android:layout_alignStart="@+id/editText_usernme_signup"
            android:layout_below="@+id/editText_usernme_signup"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/editText_Firstname_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText_email_signup"
            android:layout_alignStart="@+id/editText_email_signup"
            android:layout_below="@+id/editText_email_signup"
            android:layout_marginTop="12dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/editText_lastname_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText_Firstname_signup"
            android:layout_alignStart="@+id/editText_Firstname_signup"
            android:layout_below="@+id/editText_Firstname_signup"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:inputType="textPersonName"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/editText_password_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/editText_lastname_signup"
            android:layout_alignStart="@+id/editText_lastname_signup"
            android:layout_below="@+id/editText_lastname_signup"
            android:layout_marginTop="13dp"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#fff"/>

        <EditText
            android:id="@+id/editTextconfirm_password_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/textView_Confirm_password_signup"
            android:layout_alignLeft="@+id/editText_password_signup"
            android:layout_alignStart="@+id/editText_password_signup"
            android:ems="10"
            android:inputType="textPassword"
            android:textColor="#fff"/>

        <Button
            android:id="@+id/button_submit_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:onClick="button_submit_signup_clicked"
            android:text="@string/button_submit_signup"
            android:layout_below="@+id/editTextconfirm_password_signup"
            android:layout_toRightOf="@+id/textView_Title_Signup"
            android:layout_toEndOf="@+id/textView_Title_Signup" />

        <Button
            android:id="@+id/button_login_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="button_login_signup_clicked"
            android:text="@string/button_have_account_signup"
            android:layout_alignBaseline="@+id/button_submit_signup"
            android:layout_alignBottom="@+id/button_submit_signup"
            android:layout_toLeftOf="@+id/textView_Title_Signup"
            android:layout_toStartOf="@+id/textView_Title_Signup" />
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
